--- a/NavMenu.razor
+++ b/NavMenu.razor
@@ -9,20 +9,32 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+        <div class="textdnd" style="text-align:left;">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="randomitem">
+                <span class="oi oi-plus" aria-hidden="true"></span> Presets
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="data">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Character Selection
             </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="MonsterInfo">
+                <span class="oi oi-home" aria-hidden="true"></span> Monsters
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rules">
+                <span class="oi oi-plus" aria-hidden="true"></span> Rules
+            </NavLink>
+        </div>
         </div>
     </nav>
 </div>
